Create new npm build command

--- a/App/package.json
+++ b/App/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node -e \"console.log('open browser at http://localhost:8081/vr\\n\\n');\" && node node_modules/react-native/local-cli/cli.js start",
     "bundle": "node node_modules/react-vr/scripts/bundle.js",
+    "build": "npm run bundle && cp -r vr/build . && cp -r static_assets build && cp vr/index.html build",
     "open": "node -e \"require('xopen')('http://localhost:8081/vr/')\"",
     "devtools": "react-devtools",
     "test": "jest"
