--- a/App/package.json
+++ b/App/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node -e \"console.log('open browser at http://localhost:8081/vr\\n\\n');\" && node node_modules/react-native/local-cli/cli.js start",
-    "bundle": "node node_modules/react-vr/scripts/bundle.js",
+    "bundle": "node node_modules/react-vr/scripts/bundle.js && cp -R static_assets vr/build && cp vr/index.html vr/build",
     "open": "node -e \"require('xopen')('http://localhost:8081/vr/')\"",
     "devtools": "react-devtools",
     "test": "jest"
